--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
@@ -43,5 +47,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.13",
+    "@types/react-dom": "^18.0.5",
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
